# agentskills-cli

./: .gitignore  .saw-agent-brief.md  Cargo.toml  README.md
.saw-state/: active-impl  gate-cache.json
docs/IMPL/: IMPL-agentskills-progressive-disclosure.yaml  IMPL-agentskills-progressive-disclosure.yaml.bak
docs/IMPL/.saw-state/agentskills-progressive-disclosure/wave1/: merge-log.json
docs/IMPL/.saw-state/agentskills-progressive-disclosure/wave2/: merge-log.json
docs/IMPL/.saw-state/agentskills-progressive-disclosure/wave3/: merge-log.json
docs/IMPL/.saw-state/agentskills-progressive-disclosure/wave4/: merge-log.json
skills/: README.md
skills/progressive-disclosure-guide/: SKILL.md
src/: error.rs  lib.rs  main.rs  models.rs
src/commands/: lint.rs  mod.rs  upgrade.rs
src/upgrade/: analyzer.rs  anthropic_api.rs  anthropic_cli.rs  api_client.rs  claude_client.rs  cli_client.rs  copilot_cli.rs  frontmatter_gen.rs  gemini_api.rs  gemini_cli.rs  generator.rs  mod.rs  openai_api.rs  pattern_detector.rs  routing_graph.rs  semantic_analyzer.rs  splitter.rs
src/validation/: base_spec.rs  extensions.rs  mod.rs  progressive_disclosure.rs
tests/: integration_test.rs
